# Games101PA7

./: .gitignore  Assignment7.code-workspace  CMakeLists.txt  fybuild_run.bat  fycmake_build.bat
document&imgs/: old_git_logs.md
document&imgs/bad_res/: RendererMultiThreadErr.cpp
document&imgs/block_bugs/: SPP32.ppm  SPP32_added.ppm  SPP32_diff_only.ppm  SPP32_micr_only.ppm  SPP32_micr_only_.ppm  SPP32_mirror_only.ppm  highbox.ppm
document&imgs/good_res_no_bright/: SPP32_09.ppm  SPP32_33.ppm  SPP32_99.ppm  SPP32_metal.ppm  SPP32_nometal.ppm
document&imgs/good_res_temp/: SPP32_0.ppm  SPP32_1.ppm  SPP32_2.ppm  SPP32_3.ppm  SPP32_4.ppm
document&imgs/good_res_yes_bright/: SPP32_01.ppm  SPP32_10.ppm  SPP32_40.ppm  SPP32_67.ppm  SPP32_99.ppm
document&imgs/temp_formula_err_res/: SPP32_01.ppm  SPP32_10.ppm  SPP32_40.ppm  SPP32_67.ppm  SPP32_99.ppm
include/: BVH.hpp  Bounds3.hpp  Intersection.hpp  Material.hpp  OBJ_Loader.hpp  Ray.hpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp
src/: BVH.cpp  Renderer.cpp  Scene.cpp  main.cpp
